completed with json-server

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,162 +1,6 @@
-<mat-toolbar color="primary" class="flex justify-between items-center">
-  <!-- Logo Section -->
-  <div class="relative mb-4 right-5">
-    <img src="../assets/logo.png" height="100" width="280" alt="Logo">
-  </div>
-
-  <!-- Hamburger Menu for Mobile -->
-  <button class="lg:hidden p-2 focus:outline-none" (click)="toggleMenu()">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-    </svg>
-  </button>
-
-  <!-- Menu Items (hidden on mobile, shown on larger screens) -->
-  <div class="hidden lg:flex space-x-4">
-    <button mat-button class="text-white">Home</button>
-    <button mat-button class="text-white">About</button>
-    <button mat-button class="text-white">Pricing</button>
-    <button mat-button class="text-white">Contact</button>
-  </div>
-
-  <!-- Mobile Menu (ngIf for toggling) -->
-  @if (isMenuOpen) {
-  <div
-    class="absolute right-0 top-12 px-6 py-2 border-b-gray-400 bg-orange-400 z-10 flex-col flex space-y-2 lg:hidden mt-2">
-    <button mat-button class="text-white">Home</button>
-    <button mat-button class="text-white">About</button>
-    <button mat-button class="text-white">Pricing</button>
-    <button mat-button class="text-white">Contact</button>
-  </div>
-  }
-</mat-toolbar>
+<app-nav></app-nav>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
 
 
-<section class="bg-gradient-to-tr from-orange-200 to-orange-400 py-10">
-  <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-6">
-    <!-- Left Side Content -->
-    <div class="text-left space-y-4 md:w-1/2">
-      <p class="text-4xl font-semibold text-gray-800 inline-block relative right-3 top-2">
-        <span class="text-6xl">Y</span>
-        <span class="relative right-2">our Way</span>
-        <span>Our Goal</span>
-      </p>
-      <p class="text-gray-700 text-lg md:hidden flex flex-col">
-        <span>Choose the option that fits your needs,</span>
-        <span>Available in all over Chhattisgarh.</span>
-      </p>
-      <div class="flex gap-2 md:flex-row flex-col">
-        <button mat-raised-button #tooltip="matTooltip"
-         (click)="bookingByCall()"
-          matTooltip="+91 90990-909090"
-          color="warn"
-          >
-          <mat-icon>call</mat-icon>BOOK BY CALL
-        </button>
-        <button mat-raised-button color="warn" (click)="bookingByWhatsapp()"> <mat-icon>chat</mat-icon>BOOK BY
-          WHATSAPP</button>
-      </div>
-      <p class="text-gray-700 text-lg md:flex hidden flex-col">
-        <span>Whether it's a one-way trip, a round journey, or local rentals,</span>
-        <span>we've got you covered. Choose the option that best fits your needs,</span>
-        <span>and travel with comfort, safety, and reliability.</span>
-      </p>
 
-      <!-- Chips Section -->
-      <div>
-        <mat-chip-listbox class="flex" aria-label="Travel Options">
-          <mat-chip-option (click)="toggleForm('oneWay')" [selected]="activeForm === 'oneWay'" style="width: 120px;"
-            color="accent">One Way</mat-chip-option>
-          <mat-chip-option (click)="toggleForm('roundTrip')" [selected]="activeForm === 'roundTrip'"
-            style="width: 120px;" color="accent">Round Trip</mat-chip-option>
-          <mat-chip-option (click)="toggleForm('localRental')" [selected]="activeForm === 'localRental'"
-            style="width: 120px;" color="accent">Local Rent</mat-chip-option>
-        </mat-chip-listbox>
-      </div>
-
-      <!-- One Way Form -->
-      @if (activeForm === "oneWay") {
-      <form [formGroup]="oneWayForm" class="mt-2 space-y-4 px-3">
-        <mat-form-field appearance="outline" class="w-full mr-3" style="max-width: 300px;">
-          <input matInput formControlName="pickupLocation"  [matAutocomplete]="onwayPickup" placeholder="Pickup Location">
-          <mat-autocomplete #onwayPickup="matAutocomplete">
-              @for (field of onwayPickupFields; track $index) {
-                <mat-option [value]="field">{{field}}</mat-option>
-              }
-          </mat-autocomplete>
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-full" style="max-width: 300px;">
-          <input matInput formControlName="dropLocation" [matAutocomplete]="onwayDrop" placeholder="Drop Location">
-          <mat-autocomplete #onwayDrop="matAutocomplete">
-            @for (field of onwayDropFields; track $index) {
-              <mat-option [value]="field">{{field}}</mat-option>
-            }
-        </mat-autocomplete>
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-full mr-3" style="max-width: 300px;">
-          <input matInput formControlName="mobileNumber" placeholder="Mobile Number">
-        </mat-form-field>
-        <button mat-raised-button color="accent" (click)="checkCabPrice('oneWay')">
-          Check Cab Price
-        </button>
-      </form>
-      }
-
-      <!-- Round Trip Form -->
-      @if (activeForm === "roundTrip") {
-      <form [formGroup]="roundTripForm" class="mt-6 space-y-4 px-3">
-        <mat-form-field appearance="outline" class="w-full mr-3" style="max-width: 300px;">
-          <input matInput formControlName="pickupLocation" placeholder="Pickup Location" class="py-1 px-2 text-sm">
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-full" style="max-width: 300px;">
-          <input matInput formControlName="dropLocation" placeholder="Drop Location" class="py-1 px-2 text-sm">
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-full mr-3" style="max-width: 300px;">
-          <input matInput formControlName="mobileNumber" placeholder="Mobile Number" class="py-1 px-2 text-sm">
-        </mat-form-field>
-        <button mat-raised-button color="accent" (click)="checkCabPrice('roundTrip')">
-          Check Cab Price
-        </button>
-      </form>
-      }
-
-      <!-- Local Rental Package Form -->
-      @if (activeForm === "localRental") {
-      <form [formGroup]="localRentalForm" class="mt-6 space-y-4 px-3">
-        <mat-form-field appearance="outline" class="w-full mr-3" style="max-width: 300px;">
-          <input matInput formControlName="pickupLocation" placeholder="Pickup Location" class="py-1 px-2 text-sm">
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-full" style="max-width: 300px;">
-          <input matInput formControlName="duration" placeholder="Duration (in hours)" class="py-1 px-2 text-sm">
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-full mr-3" style="max-width: 300px;">
-          <input matInput formControlName="mobileNumber" placeholder="Mobile Number" class="py-1 px-2 text-sm">
-        </mat-form-field>
-        <button mat-raised-button color="accent" (click)="checkCabPrice('localRental')">
-          Check Cab Price
-        </button>
-      </form>
-      }
-
-    </div>
-
-    <!-- Right Side Image -->
-    <div class="mt-8 md:mt-0 md:w-1/2 flex justify-center">
-      <img class="w-full h-auto rounded-xl shadow-md" src=".././assets/hero-s.png" alt="Taxi Service Image">
-    </div>
-  </div>
-</section>
-
-<!-- Display Cab Price and Distance -->
- @if (cabPrice !== null && cabDistance !== null) {
-  <div class="mt-3">
-    <p>The cab price for the selected route is: ₹{{ cabPrice }}</p>
-    <p>Distance for the selected route: {{ cabDistance }} km</p>
-  </div>
- }
-
-@if (ifCheckPrice) {
-  <div class="mt-3">
-    <p>Price and distance for the selected route are not available.</p>
-  </div>
-}
