--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,8 +4,8 @@
         <div class="flex flex-wrap -mx-4">
             <!-- Logo & Description -->
             <div class="w-full sm:w-1/2 lg:w-3/12 px-4 mb-8">
-                <div class="flex gap-2">
-                    <img src=".././assets/logo2.jpeg" class="rounded-[8rem]" height="70" width="80" alt="Logo">
+                <div class="flex gap-2 cursor-pointer">
+                    <img (click)="openLoginDialog('admin')" src=".././assets/logo2.jpeg" class="cursor-pointer rounded-[8rem]" height="70" width="80" alt="Logo">
                     <p class="text-sm text-dark-900 mt-4">
                         Choose KiteCab for reliable and comfortable travel across Chhattisgarh and Nagpur.!
                     </p>
